basic bootstrap on index.html

--- a/index.html
+++ b/index.html
@@ -7,14 +7,61 @@
     <title>My First Bootstrap</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <header>
-<h1 class="text-success"> My New Site</h1>
+    <header class="container bg-aqua">
+        <h1 class="text-success text-center"> My New Site</h1>
+
+
+
     </header>
-    <main></main>
-    <footer></footer>
+    <main class="container border">
+        <div class="row">
+            <div class="col-sm-4 m-5" 
+            <p> Row One Col 1 Bacon ipsum dolor amet leberkas t-bone pork, swine picanha corned beef shank
+                porchetta venison. Turkey pastrami porchetta buffalo picanha ground round chuck shankle chislic filet
+                mignon pig shank kevin pork chop. Corned beef short ribs salami chuck chislic beef ribs ground round,
+                picanha jowl pancetta flank porchetta. Picanha turkey chislic pancetta. Doner swine burgdoggen, pig
+                cupim flank shankle capicola. Sirloin ham turkey beef ribs jowl jerky pork venison rump ball tip pork
+                loin shoulder chislic. Chislic fatback ribeye ham hock shoulder pork loin tri-tip shankle jerky doner
+                frankfurter prosciutto chicken beef ribs burgdoggen.</p>
+            </div>
+            <div class="col-sm-4 m-5" 
+            <p>Row 1 Col 2Bacon ipsum dolor amet leberkas t-bone pork, swine picanha corned beef shank
+                porchetta venison. Turkey pastrami porchetta buffalo picanha ground round chuck shankle chislic filet
+                mignon pig shank kevin pork chop. Corned beef short ribs salami chuck chislic beef ribs ground round,
+                picanha jowl pancetta flank porchetta. Picanha turkey chislic pancetta. Doner swine burgdoggen, pig
+                cupim flank shankle capicola. Sirloin ham turkey beef ribs jowl jerky pork venison rump ball tip pork
+                loin shoulder chislic. Chislic fatback ribeye ham hock shoulder pork loin tri-tip shankle jerky doner
+                frankfurter prosciutto chicken beef ribs burgdoggen.</p>
+            </div>
+            <div class="col-sm-4 m-5" 
+            <p>Row 3 Col 3Bacon ipsum dolor amet leberkas t-bone pork, swine picanha corned beef shank
+                porchetta venison. Turkey pastrami porchetta buffalo picanha ground round chuck shankle chislic filet
+                mignon pig shank kevin pork chop. Corned beef short ribs salami chuck chislic beef ribs ground round,
+                picanha jowl pancetta flank porchetta. Picanha turkey chislic pancetta. Doner swine burgdoggen, pig
+                cupim flank shankle capicola. Sirloin ham turkey beef ribs jowl jerky pork venison rump ball tip pork
+                loin shoulder chislic. Chislic fatback ribeye ham hock shoulder pork loin tri-tip shankle jerky doner
+                frankfurter prosciutto chicken beef ribs burgdoggen.</p>
+            </div>
+            <div class="row">
+                <div class="col-md-8 bg-danger">
+                    <h3>Look! I am Centered Horizontally</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 offset-md-2 bg-danger">
+                    <h3>Look! I am Centered Horizontally</h3>
+                </div>
+            </div>
+    </main>
+    <footer class="container">
+        <div class="bg-aqua">
+            <p class="text-center"> &copy; 2021 by Brit</p>
+        </div>
+    </footer>
     <!--Bootstrap scipt files fo at the bottom of the body-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
